SF-3823 Fix disabled state for previous/next buttons on mobile

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -264,6 +264,12 @@ header {
         .mat-icon {
           color: var(--mat-button-text-label-text-color, var(--mat-sys-primary));
         }
+
+        &:disabled {
+          .mat-icon {
+            color: var(--mat-icon-button-disabled-icon-color);
+          }
+        }
       }
 
       // Switch to icon-only prev/next buttons on small screens
